[tool.poetry]
name = "beakers"
version = "0.1.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]
readme = "README.md"

[tool.poetry.scripts]
bkr = 'beakers.cli:app'


[tool.poetry.dependencies]
python = "^3.11"
#scrapeghost = {path = "../scrapeghost", develop = true}
scrapelib = "^2.1.0"
httpx = "^0.24.0"
networkx = "^3.1"
pydantic = "^2.0.2"
typer = "^0.9.0"
structlog = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.278"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
